Bug 160490 - FILEOPEN PPTX Automatically resized textbox is not exactly as tall as in PP
Summary: FILEOPEN PPTX Automatically resized textbox is not exactly as tall as in PP
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2
Keywords:
Depends on:
Blocks: 157019
  Show dependency treegraph
 
Reported: 2024-04-02 17:47 UTC by Gabor Kelemen (Collabora)
Modified: 2024-06-22 10:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from PP (2.38 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2024-04-02 17:47 UTC, Gabor Kelemen (Collabora)
Details
10pt border shape in Impress and Writer (126.85 KB, image/png)
2024-04-02 17:48 UTC, Gabor Kelemen (Collabora)
Details
4.5pt border shape in Impress and Writer (118.84 KB, image/png)
2024-04-02 17:49 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-04-02 17:47:12 UTC
Created attachment 193444 [details]
Example file from PP

This is a followup to bug 157285, before it was even more terrible.

If the attached file (derived from attachment #189264 [details] ) is opened in Impress, the thick orange bordered textboxes text does not have the same amount of spacing below the bottom line, and the text is hardly readable as a result.

1. Open attached file
2. Notice the dark green textboxes with "Way Oversize" text have a thick orange border, which is almost overlapping the text.
These have a bit smaller height than in PP:
- Left one with 10pt border is 2.77 cm in PP, 2.29 in Impress
- Right one with 4.5pt border is 2.77 cm in PP, 2.52 in Impress, indicating the difference is likely related to the border width.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c9d4f99b2bb54ac7735b3e0d0cadbafbd0279518
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default
Comment 1 Gabor Kelemen (Collabora) 2024-04-02 17:48:54 UTC
Created attachment 193445 [details]
10pt border shape in Impress and Writer
Comment 2 Gabor Kelemen (Collabora) 2024-04-02 17:49:22 UTC
Created attachment 193446 [details]
4.5pt border shape in Impress and Writer
Comment 3 Gerald Pfeifer 2024-04-02 21:16:29 UTC
Confirmed with

  Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 40d3d510fca99b555381deb74b9915c91c924de5
  CPU threads: 12; OS: Linux 6.8; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

(In reply to Gabor Kelemen (allotropia) from comment #0)
> This is a followup to bug 157285, before it was even more terrible.

As the original reporter, I am quite happy about the progress. We've
gone from "Ouch" to "Well, a bit of work left". :-)

Thanks to Tibor and you!
Comment 4 Commit Notification 2024-06-19 21:20:00 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7e13d34086d67ecfe47db5a85a4877b5ba96f874

tdf#160490 PPTX import: fix automatically resized placeholder height

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Gerald Pfeifer 2024-06-20 08:05:44 UTC
Happily verified with last nights build:

  Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: d7aeaeafc32f78ca38942868f965bae0e6c376b1
  CPU threads: 12; OS: Linux 6.9; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

Once you close I'll move it to VERIFIED; just assume you'll push back
into 24.8 first?
Comment 6 Commit Notification 2024-06-21 10:51:55 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/259e743d493c3a20ae8a3cce761b77700aa09096

tdf#160490 PPTX import: fix automatically resized placeholder height

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Gerald Pfeifer 2024-06-22 10:26:56 UTC
Verified per comment #5 for 25.2 and now also 24.8 with

  Version: 24.8.0.0.beta1+ (X86_64) / LibreOffice Community
  Build ID: 16c0dfed795e2c6cfb88488f776f1ef496079c99
  CPU threads: 12; OS: Linux 6.9; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US