tdf#160490 PPTX import: fix automatically resized placeholder height

See also commit Ia7f94d7452d1a1c3f004aebd73b6ed5cbfd9b43b
"tdf#157285 PPTX import: fix placeholder height".

Change-Id: I6203af3fe86a60e29121685ffeb435f4ff25368a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169206
Tested-by: Jenkins
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>