oox/source/drawingml/shape.cxx
@@ -1254,14 +1254,48 @@ Reference< XShape > const & Shape::createAndInsert(
             xSet->setPropertyValue(u"Decorative"_ustr, Any(m_isDecorative));
         }
 
-        // set the placeholder height to "0" if it has the 'TextAutoGrowHeight' property
-        // the placeholder height is set later to the correct size.
-        bool bAutoGrowHeight = false;
-        xSet->getPropertyValue(u"TextAutoGrowHeight"_ustr) >>= bAutoGrowHeight;
-        if (bAutoGrowHeight && mxShape->getShapeType().startsWith("com.sun.star.presentation."))
+        // Placeholder uses the height set on the slide instead of the height from the master slide,
+        // if it has the "TextAutoGrowHeight" property
+        if (getTextBody() && mxShape->getShapeType().startsWith("com.sun.star.presentation."))
         {
-            awt::Size aSize(mxShape->getSize().Width, 0);
-            mxShape->setSize(aSize);
+            bool bAutoGrowHeight = getTextBody()
+                                       ->getTextProperties()
+                                       .maPropertyMap.getProperty(PROP_TextAutoGrowHeight)
+                                       .get<bool>();
+            if (bAutoGrowHeight)
+            {
+                ppt::PowerPointImport* pPPT = dynamic_cast<ppt::PowerPointImport*>(&rFilterBase);
+                if (!pPPT->getActualSlidePersist()->isMasterPage())
+                {
+                    // There is no support for change the shape of the drawing in LO, but we check,
+                    // if the placeholder changes its shape, top and bottom margins won't be used.
+                    bool bIsChangePlaceholderShape
+                        = !mpCustomShapePropertiesPtr->getAdjustmentGuideList().empty();
+
+                    sal_Int32 nUpper = 0;
+                    sal_Int32 nLower = 0;
+                    sal_Int32 nHeight = maSize.Height / 360;
+                    if (getTextBody()->getTextProperties().moInsets[1].value() != 0
+                        && getTextBody()->getTextProperties().moInsets[3].value() != 0)
+                    {
+                        if (!bIsChangePlaceholderShape)
+                        {
+                            nUpper = *getTextBody()->getTextProperties().moInsets[1];
+                            nLower = *getTextBody()->getTextProperties().moInsets[3];
+                            nHeight -= (nUpper + nLower);
+                        }
+                    }
+                    else
+                    {
+                        maDefaultShapeProperties.getProperty(PROP_TextUpperDistance) >>= nUpper;
+                        maDefaultShapeProperties.getProperty(PROP_TextLowerDistance) >>= nLower;
+                        nHeight += (nUpper + nLower);
+                    }
+                    mxShape->setSize(awt::Size(0, nHeight));
+                }
+            }
+            else // the placeholder uses the height set on the master slide
+                mxShape->setSize(awt::Size(0, 0));
         }
 
         if (aServiceName != "com.sun.star.text.TextFrame")
